# dep_inj

./: Cargo.toml
dxe_core/: Cargo.toml
dxe_core/src/: access.rs  function_component.rs  lib.rs  params.rs  storage.rs  unsafe_storage.rs
examples/: fn_dep_inj.rs  struct_dep_inj.rs
platform/: Cargo.toml
platform/src/: main.rs
sdk/: Cargo.toml
sdk/src/: component.rs  lib.rs  protocol.rs
sdk/src/component/: params.rs  storage.rs
src/: lib.rs  params.rs  type_fn.rs
