[package]
name = "dep_inj"
version = "0.1.0"
edition = "2021"

[lib]
name = "dep_inj"
path = "src/lib.rs"

[[example]]
name = "fn_dep_inj"
path = "examples/fn_dep_inj.rs"

[[example]]
name = "struct_dep_inj"
path = "examples/struct_dep_inj.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }