[workspace]
resolver = "2"

members = ["platform"]

[workspace.dependencies]
dxe_core = { path = "dxe_core" }
sdk = { path = "sdk" }
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
log = { version = "0.4.22", default-features = false }
fixedbitset = { version = "0.5.7", default-features = false }
r-efi = { version = "^5", default-features = false }