[package]
name = "dxe_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "dxe_core"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdk = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
fixedbitset = { workspace = true }
r-efi = { workspace = true }
