[package]
name = "platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dxe_core = { workspace = true }
pretty_env_logger = "0.5.0"
sdk = { workspace = true }
log = { workspace = true }
colog = "1.3.0"
r-efi = { workspace = true }
